--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 #title {
 	border: 5px solid black;
+	height: 100px;
+	width: 100%;
 	margin: auto;
-	padding-left: 20px;
 }
 #title .name {
 	border: 2px solid black;
-	margin: auto;
+	margin: 10px;
+	margin-top: 20px;
 	margin-left: 5%;
 	margin-right:80%;
 	display: inline-block;
@@ -16,11 +18,50 @@
 	padding-left: 20px;
 	padding-right: 80px;
 	display: flex;
+	float: center;
+	margin: 10px;
 }
 
 .name img {
 	padding-right: 20px;
 	height: auto;
 	width: 70px;
-	display: flex;
+}
+
+#menu {
+	border: 5px solid black;
+	margin: auto;
+	height: 70px;
+	width: 100%
+	
+}
+
+#corpo {
+	border: solid 5px black;
+	width: 100%;
+	height: 900px;
+}
+
+nav {
+	border: 5px solid black;
+	float: left;
+	width: 18%;
+	height: 100%;
+	display: inline-block;
+}
+
+aside {
+	border: 5px solid black;
+	float: right;
+	width: 18%;
+	height: 100%;
+	display: inline-block;
+}
+
+article {
+	border: 5px black solid;
+	float: center;
+	height: 100%;
+	width: auto;
+	display: inline-block;
 }
