--- a/grafici/grafici.css
+++ b/grafici/grafici.css
@@ -4,3 +4,11 @@
     position:relative;
     margin:0 auto;
 }
+h1{
+    text-align:center;
+    color:black;
+}
+.spazn{
+    margin-top:50px;
+    color:black;
+}
