--- a/grafici/grafici.css
+++ b/grafici/grafici.css
@@ -1,14 +1,11 @@
-.dim{
-    width:900px;
-    height:auto;
-    position:relative;
-    margin:0 auto;
+.chartBox{
+    width:600px !important;
+    height:600px !important;
+    position:relaive;
+    justify-content:center;
+    margin: 0 auto;
 }
-h1{
-    text-align:center;
-    color:black;
-}
-.spazn{
-    margin-top:50px;
-    color:black;
+
+body{
+    display:grid;
 }
