--- a/sito/style.css
+++ b/sito/style.css
@@ -180,4 +180,187 @@ footer {
 	border: solid black 5px;
 	height: 80px;
 	width: 100%;
+}body, html {
+	height: auto;
+	width: auto;
+	padding-left: 200px;
+	padding-right: 200px;
 }
+
+body {
+	margin:0;
+	padding:0;
+}
+
+.layout {
+	border: 5px black solid;
+	width: auto;
+	height: auto;
+	display: flex;
+	display: -webkit-flex;
+	flex-flow: row nowrap;
+	-webkit-flex-flow: row nowrap;
+	justify-content: space-around;
+	-webkit-justify-content: space-around;
+	display: grid;
+	grid:
+		"header header header" auto
+		"leftSide body rightSide" 1fr
+		"footer footer footer" auto
+		/ auto 1fr auto;
+	gap: 8px;
+}
+
+.leftSide {
+	border: 5px black solid;
+	grid-area: leftSide; 
+	width: 240px;
+	height: 1fr;
+	background-image: url("immagini/germoglio.png");
+	background-repeat: no-repeat;
+}
+.body {
+	border: 5px black solid;
+	grid-area: body;
+	width: auto;
+}
+.rightSide {
+	border: 5px black solid;
+	grid-area: rightSide;
+	width: 240px;
+	height: 800px;
+	background-image: url("immagini/natura-alberi.jpg");
+	background-repeat: no-repeat;
+}
+.footer {
+	border: 5px black solid;
+	grid-area: footer; 
+	height: auto;
+	width: 1fr;
+}
+
+#title {
+	height: 110px;
+	width: 100%;
+	display: inline-block;
+	margin: auto;
+}
+
+.logo {
+	margin: auto;
+	padding-left: 20px;
+	float: left;
+	padding-right: 30px;
+}
+	
+.logo img {
+	height: 120px;
+	width: 100px;
+	margin: auto;
+	padding-top: 5px;
+	padding-bottom: 30px;
+	 
+}
+.a {
+	height: 15px;
+	border-width:0;
+	color: #005000;
+	background-color: #005000;
+}
+
+#title .name {
+	height: 60px;
+	width: 59%;
+	text-align: auto;
+	display: inline-block;
+}
+
+#title .subname {
+	height: 40px;
+	width: 70%;
+	text-align: auto;
+	display: inline-block;
+}
+
+.subname h3 {
+	text-align: left;
+	margin: auto;
+	padding-left: 80px;
+}
+
+.s {
+	margin-left: 65px;
+}
+
+.name h1 {
+	padding-left: 25px;
+	padding-right: 80px;
+	display: flex;
+	float: center;
+	margin: 10px;
+}
+
+.name img {
+	padding-right: 20px;
+	height: auto;
+	width: 70px;
+}
+
+#menu {
+	margin: auto;
+	height: auto;
+	width: 100%;
+	text-align: left;
+	float: center;
+}
+
+#menu .testo {
+	color: black;
+	padding-left: 55px;
+	display: inline-block;
+}
+
+#corpo {
+	border: solid 5px black;
+	width: auto;
+	height: 900px;
+}
+
+#corpo p {
+	color: white;
+	font-size: 20px;
+	padding-bottom: 20px;
+}
+
+nav {
+	border: 5px solid black;
+	float: left;
+	width: 18%;
+	height: 100%;
+	display: inline-block;
+	background-color: #106850;
+}
+
+aside {
+	border: 5px solid black;
+	float: right;
+	width: 18%;
+	height: 100%;
+	display: inline-block;
+	background-color: #106850;
+}
+
+article {
+	border: 5px black solid;
+	float: center;
+	height: 100%;
+	width: 62.18%;
+	display: inline-block;
+}
+
+footer {
+	border: solid black 5px;
+	height: 80px;
+	width: 100%;
+}
+
