--- a/grafici/grafici.css
+++ b/grafici/grafici.css
@@ -1,18 +1,17 @@
 .chartBox{
     width:500px !important;
     height:500px !important;
-    position:relaive;
-    justify-content:center;
-    margin: 0 auto;
+	margin: 0 auto;
+	margin-top:20px;
 }
 #myChart1{
-    border:2px solid black;
+    border:2px solid green;
 }
 #myChart2{
-    border:2px solid black;
+    border:2px solid green;
 }
 #myChart{
-    border:2px solid black;
+    border:2px solid green;
 }
 
 
@@ -23,15 +22,19 @@
 
 body, html {
 	height: auto;
-	padding-left: 100px;
-	padding-right: 100px;
-
+	width: auto;
+	padding-left: 200px;
+	padding-right: 200px;
 }
 
+body {
+	margin:0;
+	padding:0;
+}
 
 .layout {
 	border: 5px black solid;
-	width: 1017px;
+	width: auto;
 	height: auto;
 	display: flex;
 	display: -webkit-flex;
@@ -53,6 +56,8 @@ body, html {
 	grid-area: leftSide; 
 	width: 240px;
 	height: 1fr;
+	background-image: url("immagini/germoglio.png");
+	background-repeat: no-repeat;
 }
 .body {
 	border: 5px black solid;
@@ -64,6 +69,8 @@ body, html {
 	grid-area: rightSide;
 	width: 240px;
 	height: 800px;
+	background-image: url("immagini/natura-alberi.jpg");
+	background-repeat: no-repeat;
 }
 .footer {
 	border: 5px black solid;
@@ -87,11 +94,11 @@ body, html {
 }
 	
 .logo img {
-	height: 110px;
-	width:110ppx;
+	height: 120px;
+	width: 130px;
 	margin: auto;
 	padding-top: 5px;
-    padding-bottom: 30px;
+	padding-bottom: 30px;
 	 
 }
 .a {
@@ -139,26 +146,186 @@ body, html {
 	width: 70px;
 }
 
-#menu {
-	margin: auto;
-	height: auto;
-	width: 100%;
-	text-align: left;
-	float: center;
-}
 
 #menu .testo {
 	color: black;
 	padding-left: 55px;
 	display: inline-block;
+	margin-top:20px;
+	margin-bottom:20px;
+}
+#menu{
+	margin: 0;
+	padding: 0;
 }
 
-#corpo {
-	border: solid 5px black;
-	width: auto;
-	height: 900px;
-	background-color: #3bb64c;
+nav {
+	border:none;
+	float: left;
+	width: 18%;
+	height: 100%;
+	display: inline-block;
+	background-color: #106850;
 }
+
+aside {
+	border:none;
+	float: right;
+	width: 18%;
+	height: 100%;
+	display: inline-block;
+	background-color: #106850;
+}
+
+article {
+	border: none;
+	float: center;
+	height: 100%;
+	width: 62.18%;
+	display: inline-block;
+}
+
+footer {
+	border: solid black 5px;
+	height: 80px;
+	width: 100%;
+}body, html {
+	height: auto;
+	width: auto;
+	padding-left: 200px;
+	padding-right: 200px;
+}
+
+body {
+	margin:0;
+	padding:0;
+}
+
+.layout {
+	border: none;
+	width: auto;
+	height: auto;
+	display: flex;
+	display: -webkit-flex;
+	flex-flow: row nowrap;
+	-webkit-flex-flow: row nowrap;
+	justify-content: space-around;
+	-webkit-justify-content: space-around;
+	display: grid;
+	grid:
+		"header header header" auto
+		"leftSide body rightSide" 1fr
+		"footer footer footer" auto
+		/ auto 1fr auto;
+	gap: 8px;
+}
+
+.leftSide {
+	border: 5px solid #005000;;
+	grid-area: leftSide; 
+	width: 240px;
+	height: 1fr;
+	background-repeat: no-repeat;
+	background-image: url("germoglio2.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+.body {
+	border: 5px solid #005000;;
+	grid-area: body;
+	width: auto;
+	height:1800px;
+}
+.rightSide {
+	border: 5px #005000 solid;
+	grid-area: rightSide;
+	width: 240px;
+	height: auto;
+	background-repeat: no-repeat;
+	background-image: url("prova.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+.footer {
+	border: 5px black solid;
+	grid-area: footer; 
+	height: auto;
+	width: 1fr;
+}
+
+#title {
+	height: 110px;
+	width: 100%;
+	display: inline-block;
+	margin: auto;
+}
+
+.logo {
+	margin: auto;
+	padding-left: 20px;
+	float: left;
+	padding-right: 30px;
+}
+	
+.logo img {
+	height: 100px;
+	width: 130px;
+	margin: auto;
+	padding-top: 5px;
+	padding-bottom: 30px;
+	 
+}
+
+
+#title .name {
+	height: 60px;
+	width: 59%;
+	text-align: auto;
+	display: inline-block;
+}
+
+#title .subname {
+	height: 40px;
+	width: 70%;
+	text-align: auto;
+	display: inline-block;
+}
+
+.subname h3 {
+	text-align: left;
+	margin: auto;
+	padding-left: 80px;
+}
+
+.s {
+	margin-left: 65px;
+}
+
+.name h1 {
+	padding-left: 25px;
+	padding-right: 80px;
+	display: flex;
+	float: center;
+	margin: 10px;
+}
+
+.name img {
+	padding-right: 20px;
+	height: auto;
+	width: 70px;
+}
+
+a{
+	color:black;
+	text-decoration:none;
+
+}
+a:hover{
+	text-decoration:underline;
+	color:blue;
+	font-weight:bold;
+}
+
 
 #corpo p {
 	color: white;
@@ -197,3 +364,5 @@ footer {
 	height: 80px;
 	width: 100%;
 }
+
+
