--- a/sito/style.css
+++ b/sito/style.css
@@ -1,3 +1,25 @@
+.chartBox{
+    width:500px !important;
+    height:500px !important;
+	margin: 0 auto;
+	margin-top:20px;
+}
+#myChart1{
+    border:2px solid green;
+}
+#myChart2{
+    border:2px solid green;
+}
+#myChart{
+    border:2px solid green;
+}
+
+
+
+
+
+
+
 body, html {
 	height: auto;
 	width: auto;
@@ -13,7 +35,7 @@ body {
 .layout {
 	border: 5px black solid;
 	width: auto;
-	height: 1000px;
+	height: auto;
 	display: flex;
 	display: -webkit-flex;
 	flex-flow: row nowrap;
@@ -33,10 +55,9 @@ body {
 	border: 5px black solid;
 	grid-area: leftSide; 
 	width: 240px;
-	height: auto;
-	background-image: url("immagini/germoglio3.png");
+	height: 1fr;
+	background-image: url("immagini/germoglio.png");
 	background-repeat: no-repeat;
-	background-attachment: fixed;
 }
 .body {
 	border: 5px black solid;
@@ -47,10 +68,9 @@ body {
 	border: 5px black solid;
 	grid-area: rightSide;
 	width: 240px;
-	height: auto;
-	background-image: url("immagini/prova2.png");
+	height: 800px;
+	background-image: url("immagini/natura-alberi.jpg");
 	background-repeat: no-repeat;
-	background-attachment: fixed;
 }
 .footer {
 	border: 5px black solid;
@@ -60,13 +80,10 @@ body {
 }
 
 #title {
-	height: 230px;
+	height: 110px;
 	width: 100%;
 	display: inline-block;
 	margin: auto;
-	background-image: url("immagini/banner.png");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
 }
 
 .logo {
@@ -77,9 +94,11 @@ body {
 }
 	
 .logo img {
-	height: 100px;
-	width: 65px;
+	height: 120px;
+	width: 130px;
 	margin: auto;
+	padding-top: 5px;
+	padding-bottom: 30px;
 	 
 }
 .a {
@@ -127,32 +146,21 @@ body {
 	width: 70px;
 }
 
-#menu {
-	margin: auto;
-	height: auto;
-	width: 100%;
-	text-align: left;
-	float: center;
-}
 
 #menu .testo {
 	color: black;
 	padding-left: 55px;
 	display: inline-block;
+	margin-top:20px;
+	margin-bottom:20px;
 }
-
-#corpo {
-	width: auto;
-	height: 900px;
-}
-
-#corpo p {
-	color: white;
-	font-size: 20px;
-	padding-bottom: 20px;
+#menu{
+	margin: 0;
+	padding: 0;
 }
 
 nav {
+	border:none;
 	float: left;
 	width: 18%;
 	height: 100%;
@@ -161,6 +169,7 @@ nav {
 }
 
 aside {
+	border:none;
 	float: right;
 	width: 18%;
 	height: 100%;
@@ -169,6 +178,7 @@ aside {
 }
 
 article {
+	border: none;
 	float: center;
 	height: 100%;
 	width: 62.18%;
@@ -176,14 +186,193 @@ article {
 }
 
 footer {
+	border: solid black 5px;
 	height: 80px;
 	width: 100%;
 }
 
-.spazziatura {
-	padding-bottom:10px;
+body, html {
+	height: auto;
+	width: auto;
+	padding-left: 200px;
+	padding-right: 200px;
+}
+
+body {
+	margin:0;
+	padding:0;
+}
+
+.layout {
+	border: none;
+	width: auto;
+	height: auto;
+	display: flex;
+	display: -webkit-flex;
+	flex-flow: row nowrap;
+	-webkit-flex-flow: row nowrap;
+	justify-content: space-around;
+	-webkit-justify-content: space-around;
+	display: grid;
+	grid:
+		"header header header" auto
+		"leftSide body rightSide" 1fr
+		"footer footer footer" auto
+		/ auto 1fr auto;
+	gap: 8px;
+}
+
+.leftSide {
+	border: 5px solid #005000;;
+	grid-area: leftSide; 
+	width: 240px;
+	height: 1fr;
+	background-repeat: no-repeat;
+	background-image: url("immagini/germoglio3.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+.body {
+	border: 5px solid #005000;;
+	grid-area: body;
+	width: auto;
+	height:1800px;
+}
+.rightSide {
+	border: 5px #005000 solid;
+	grid-area: rightSide;
+	width: 240px;
+	height: auto;
+	background-repeat: no-repeat;
+	background-image: url("immagini/prova2.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+.footer {
+	border: 5px black solid;
+	grid-area: footer; 
+	height: auto;
+	width: 1fr;
+}
+
+#title {
+	height: 230px;
+	width: 100%;
+	display: inline-block;
+	margin: auto;
+	background-image: url("immagini/banner.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+
+.logo {
+	padding-top: 35px;
+	margin: auto;
+	padding-left: 50px;
+	float: left;
+	padding-right: 30px;
+}
+	
+.logo img {
+	height: 140px;
+	width: 90px;
+	margin: auto;
+	padding-top: 5px;
+	padding-bottom: 30px;
+	 
 }
 
 
+#title .name {
+	height: 60px;
+	width: 59%;
+	text-align: auto;
+	display: inline-block;
+}
+
+#title .subname {
+	height: 40px;
+	width: 70%;
+	text-align: auto;
+	display: inline-block;
+}
+
+.subname h3 {
+	text-align: left;
+	margin: auto;
+	padding-left: 90px;
+	padding-top: 20px;
+	font-size: 30px;
+}
+
+.s {
+	margin-left: 65px;
+}
+
+.name h1 {
+	padding-top: 50px;
+	padding-left: 25px;
+	padding-right: 80px;
+	display: flex;
+	float: center;
+	margin: 10px;
+	font-size: 50px;
+}
+
+.name img {
+	padding-right: 20px;
+	height: auto;
+	width: 70px;
+}
+
+a{
+	color:black;
+	text-decoration:none;
+
+}
+a:hover{
+	text-decoration:underline;
+	color:blue;
+	font-weight:bold;
+}
+
+
+#corpo p {
+	color: white;
+	font-size: 20px;
+	padding-bottom: 20px;
+}
+
+nav {
+	border: 5px solid black;
+	float: left;
+	width: 18%;
+	height: 100%;
+	display: inline-block;
+	background-color: #106850;
+}
+
+aside {
+	border: 5px solid black;
+	float: right;
+	width: 18%;
+	height: 100%;
+	display: inline-block;
+	background-color: #106850;
+}
+
+article {
+	border: 5px black solid;
+	float: center;
+	height: 100%;
+	width: 62.18%;
+	display: inline-block;
+}
+
+footer {
+	border: solid black 5px;
+	height: 80px;
+	width: 100%;
+}
 
 
