--- a/grafici/grafici.css
+++ b/grafici/grafici.css
@@ -14,12 +14,6 @@
     border:2px solid green;
 }
 
-
-
-
-
-
-
 body, html {
 	height: auto;
 	width: auto;
@@ -31,121 +25,6 @@ body {
 	margin:0;
 	padding:0;
 }
-
-.layout {
-	border: 5px black solid;
-	width: auto;
-	height: auto;
-	display: flex;
-	display: -webkit-flex;
-	flex-flow: row nowrap;
-	-webkit-flex-flow: row nowrap;
-	justify-content: space-around;
-	-webkit-justify-content: space-around;
-	display: grid;
-	grid:
-		"header header header" auto
-		"leftSide body rightSide" 1fr
-		"footer footer footer" auto
-		/ auto 1fr auto;
-	gap: 8px;
-}
-
-.leftSide {
-	border: 5px black solid;
-	grid-area: leftSide; 
-	width: 240px;
-	height: 1fr;
-	background-image: url("immagini/germoglio.png");
-	background-repeat: no-repeat;
-}
-.body {
-	border: 5px black solid;
-	grid-area: body;
-	width: auto;
-}
-.rightSide {
-	border: 5px black solid;
-	grid-area: rightSide;
-	width: 240px;
-	height: 800px;
-	background-image: url("immagini/natura-alberi.jpg");
-	background-repeat: no-repeat;
-}
-.footer {
-	border: 5px black solid;
-	grid-area: footer; 
-	height: auto;
-	width: 1fr;
-}
-
-#title {
-	height: 110px;
-	width: 100%;
-	display: inline-block;
-	margin: auto;
-}
-
-.logo {
-	margin: auto;
-	padding-left: 20px;
-	float: left;
-	padding-right: 30px;
-}
-	
-.logo img {
-	height: 120px;
-	width: 130px;
-	margin: auto;
-	padding-top: 5px;
-	padding-bottom: 30px;
-	 
-}
-.a {
-	height: 15px;
-	border-width:0;
-	color: #005000;
-	background-color: #005000;
-}
-
-#title .name {
-	height: 60px;
-	width: 59%;
-	text-align: auto;
-	display: inline-block;
-}
-
-#title .subname {
-	height: 40px;
-	width: 70%;
-	text-align: auto;
-	display: inline-block;
-}
-
-.subname h3 {
-	text-align: left;
-	margin: auto;
-	padding-left: 80px;
-}
-
-.s {
-	margin-left: 65px;
-}
-
-.name h1 {
-	padding-left: 25px;
-	padding-right: 80px;
-	display: flex;
-	float: center;
-	margin: 10px;
-}
-
-.name img {
-	padding-right: 20px;
-	height: auto;
-	width: 70px;
-}
-
 
 #menu .testo {
 	color: black;
@@ -159,47 +38,6 @@ body {
 	padding: 0;
 }
 
-nav {
-	border:none;
-	float: left;
-	width: 18%;
-	height: 100%;
-	display: inline-block;
-	background-color: #106850;
-}
-
-aside {
-	border:none;
-	float: right;
-	width: 18%;
-	height: 100%;
-	display: inline-block;
-	background-color: #106850;
-}
-
-article {
-	border: none;
-	float: center;
-	height: 100%;
-	width: 62.18%;
-	display: inline-block;
-}
-
-footer {
-	border: solid black 5px;
-	height: 80px;
-	width: 100%;
-}body, html {
-	height: auto;
-	width: auto;
-	padding-left: 200px;
-	padding-right: 200px;
-}
-
-body {
-	margin:0;
-	padding:0;
-}
 
 .layout {
 	border: none;
@@ -226,7 +64,7 @@ body {
 	width: 240px;
 	height: 1fr;
 	background-repeat: no-repeat;
-	background-image: url("germoglio2.jpg");
+	background-image: url("germoglio3.png");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
@@ -242,7 +80,7 @@ body {
 	width: 240px;
 	height: auto;
 	background-repeat: no-repeat;
-	background-image: url("prova.png");
+	background-image: url("prova2.png");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
@@ -253,29 +91,32 @@ body {
 	width: 1fr;
 }
 
-#title {
-	height: 110px;
-	width: 100%;
-	display: inline-block;
-	margin: auto;
-}
-
 .logo {
+	padding-top: 35px;
 	margin: auto;
-	padding-left: 20px;
+	padding-left: 50px;
 	float: left;
 	padding-right: 30px;
 }
 	
 .logo img {
-	height: 100px;
-	width: 130px;
+	height: 140px;
+	width: 90px;
 	margin: auto;
 	padding-top: 5px;
 	padding-bottom: 30px;
 	 
 }
 
+#title {
+	height: 230px;
+	width: 100%;
+	display: inline-block;
+	margin: auto;
+	background-image: url("banner.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
 
 #title .name {
 	height: 60px;
@@ -294,7 +135,9 @@ body {
 .subname h3 {
 	text-align: left;
 	margin: auto;
-	padding-left: 80px;
+	padding-left: 90px;
+	padding-top: 20px;
+	font-size: 30px;
 }
 
 .s {
@@ -302,11 +145,13 @@ body {
 }
 
 .name h1 {
+	padding-top: 50px;
 	padding-left: 25px;
 	padding-right: 80px;
 	display: flex;
 	float: center;
 	margin: 10px;
+	font-size: 50px;
 }
 
 .name img {
@@ -334,16 +179,15 @@ a:hover{
 }
 
 nav {
-	border: 5px solid black;
+	border:none;
 	float: left;
 	width: 18%;
 	height: 100%;
 	display: inline-block;
 	background-color: #106850;
 }
-
 aside {
-	border: 5px solid black;
+	border:none;
 	float: right;
 	width: 18%;
 	height: 100%;
@@ -352,7 +196,7 @@ aside {
 }
 
 article {
-	border: 5px black solid;
+	border: none;
 	float: center;
 	height: 100%;
 	width: 62.18%;
@@ -365,4 +209,9 @@ footer {
 	width: 100%;
 }
 
-
+.a {
+	height: 15px;
+	border-width:0;
+	color: #005000;
+	background-color: #005000;
+}
