--- a/grafici/chisiamo.css
+++ b/grafici/chisiamo.css
@@ -1,19 +1,3 @@
-.chartBox{
-    width:500px !important;
-    height:500px !important;
-	margin: 0 auto;
-	margin-top:20px;
-}
-#myChart1{
-    border:2px solid green;
-}
-#myChart2{
-    border:2px solid green;
-}
-#myChart{
-    border:2px solid green;
-}
-
 body, html {
 	height: auto;
 	width: auto;
@@ -86,11 +70,10 @@ body {
 }
 .footer {
 	grid-area: footer; 
-	height: 150px;
+	height: auto;
 	width: 1fr;
-	background-color: #333333;
-	margin-bottom: 20px;
 }
+
 .logo {
 	padding-top: 35px;
 	margin: auto;
@@ -211,37 +194,8 @@ article {
 	color: #005000;
 	background-color: #005000;
 }
-.imf {
-	width: 80px;
-	height: 80px;
-	padding-top: 40px;
-	display: inline-block;
-	padding-right: 640px;
-	float: right;
-}
-
-.imi {
-	width: 80px;
-	height: 80px;
-	padding-right: 20px;
-	padding-top: 39px;
-	display: inline-block;
-	float: right;
-}
-
-.imt {
-	width: 80px;
-	height: 80px;
-	padding-top: 40px;
-	display: inline-block;
-	float: right;
-	padding-right: 20px;
-}
-
-.copy {
-	float: left;
-	color: white;
-	display: inline-block;
-	padding-top: 80px;
-	padding-left: 15px;
+.chisiamo{
+    float:left; 
+    padding-left:30px;
+    font-size:30px;
 }
