--- a/sito/styleinostriprodotti.css
+++ b/sito/styleinostriprodotti.css
@@ -238,3 +238,17 @@ footer {
 	padding-top: 80px;
 	padding-left: 15px;
 }
+.caselle{
+	border: 2px solid #005000;
+	width: 250px;
+	height: 300px;
+	margin-top: 10px;
+	margin-left: 10px;
+	display: inline-block;
+}
+.img{
+	padding: 15px;
+}
+figcaption{
+	text-align: center;
+}
