--- a/sito/stylechisiamo.css
+++ b/sito/stylechisiamo.css
@@ -238,3 +238,10 @@ footer {
 	padding-top: 80px;
 	padding-left: 15px;
 }
+.title{
+	padding-left:20px;
+	font-weight:bold;
+	font-size:50px;
+	color:darkgreen;
+
+}
