--- a/sito/ITALIANO/index/style.css
+++ b/sito/ITALIANO/index/style.css
@@ -1,234 +1,224 @@
 body, html {
-	height: auto;
-	width: auto;
-	padding-left: 200px;
-	padding-right: 300px;
-	/*display: flex;
-	flex-wrap: nowrap;
-	justify-content: center;*/
-	justify-content: center;
+    height: auto;
+    width: auto;
+    padding-left: 200px;
+    padding-right: 200px;
+    /*display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;*/
 }
-
+ 
 body {
-	margin:0;
-	padding:0;
-	display: flex;
-	display: -webkit-flex;
-	flex-flow: row nowrap;
-	-webkit-flex-flow: row nowrap;
-	justify-content: space-around;
-	-webkit-justify-content: space-around;
-	width: 1600px;
+    margin:0;
+    padding:0;
 }
-
+ 
 #menu .testo {
-	font-size: 15px;
-	color: black;
-	padding-left: 55px;
-	display: inline-block;
-	margin-top:20px;
-	margin-bottom:20px;
+    font-size: 15px;
+    color: black;
+    padding-left: 55px;
+    display: inline-block;
+    margin-top:20px;
+    margin-bottom:20px;
 }
 #menu{
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
-
-
+ 
+ 
 .layout {
-	border: none;
-	width: auto;
-	height: auto;
-	display: flex;
-	flex-direction: nowrap;
-	display: -webkit-flex;
-	flex-flow: row nowrap;
-	-webkit-flex-flow: row nowrap;
-	justify-content: space-around;
-	-webkit-justify-content: space-around;
-	display: grid;
-	grid:
-		"header header header" auto
-		"leftSide body rightSide" 1fr
-		"footer footer footer" auto
-		/ auto 1fr auto;
-	gap: 8px;
+    border: none;
+    width: auto;
+    height: auto;
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row nowrap;
+    -webkit-flex-flow: row nowrap;
+    justify-content: space-around;
+    -webkit-justify-content: space-around;
+    display: grid;
+    grid:
+        "header header header" auto
+        "leftSide body rightSide" 1fr
+        "footer footer footer" auto
+        / auto 1fr auto;
+    gap: 8px;
 }
-
+ 
 .leftSide {
-	border: 5px solid #005000;
-	grid-area: leftSide; 
-	width: 240px;
-	height: 1fr;
-	background-repeat: no-repeat;
-	background-image: url("../IMMAGINI/germoglio3.png");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+    border: 5px solid #005000;
+    grid-area: leftSide; 
+    width: 240px;
+    height: 1fr;
+    background-repeat: no-repeat;
+    background-image: url("../../immagini/germoglio3.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .body {
-	border: 5px solid #005000;;
-	grid-area: body;
-	width: 900px;
-	height:1800px;
+    border: 5px solid #005000;;
+    grid-area: body;
+    width: auto;
+    height:1800px;
 }
 .rightSide {
-	border: 5px #005000 solid;
-	grid-area: rightSide;
-	width: 240px;
-	height: auto;
-	background-repeat: no-repeat;
-	background-image: url("../immagini/prova2.png");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+    border: 5px #005000 solid;
+    grid-area: rightSide;
+    width: 240px;
+    height: auto;
+    background-repeat: no-repeat;
+    background-image: url("../../immagini/prova2.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .footer {
-	grid-area: footer; 
-	height: 150px;
-	width: 1fr;
-	background-color: #022600;
-	margin-bottom: 20px;
+    grid-area: footer; 
+    height: 150px;
+    width: 1fr;
+    background-color: #022600;
+    margin-bottom: 20px;
 }
-
+ 
 .logo {
-	padding-top: 35px;
-	margin: auto;
-	padding-left: 50px;
-	float: left;
-	padding-right: 30px;
+    padding-top: 35px;
+    margin: auto;
+    padding-left: 50px;
+    float: left;
+    padding-right: 30px;
 }
-	
+    
 .logo img {
-	height: 140px;
-	width: 90px;
-	margin: auto;
-	padding-top: 5px;
-	padding-bottom: 30px;
-	 
+    height: 140px;
+    width: 90px;
+    margin: auto;
+    padding-top: 5px;
+    padding-bottom: 30px;
+     
 }
-
+ 
 #title {
-	height: 230px;
-	width: auto;
-	display: inline-block;
-	margin: auto;
-	background-image: url("../immagini/banner.png");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	padding-left: 66px;
+    height: 230px;
+    width: 100%;
+    display: inline-block;
+    margin: auto;
+    background-image: url("../../immagini/banner.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
-
+ 
 #title .name {
-	height: 60px;
-	width: 59%;
-	text-align: auto;
-	display: inline-block;
+    height: 60px;
+    width: 59%;
+    text-align: auto;
+    display: inline-block;
 }
-
+ 
 #title .subname {
-	height: 40px;
-	width: 70%;
-	text-align: auto;
-	display: inline-block;
+    height: 40px;
+    width: 70%;
+    text-align: auto;
+    display: inline-block;
 }
-
+ 
 #title .login {
-	float: right;
-	margin-right: 30px;
+    float: right;
+    margin-right: 30px;
 }
-
+ 
 .subname h3 {
-	text-align: left;
-	margin: auto;
-	padding-left: 90px;
-	padding-top: 20px;
-	font-size: 30px;
+    text-align: left;
+    margin: auto;
+    padding-left: 90px;
+    padding-top: 20px;
+    font-size: 30px;
 }
-
+ 
 .s {
-	margin-left: 65px;
+    margin-left: 65px;
 }
-
+ 
 .name h1 {
-	padding-top: 50px;
-	padding-left: 25px;
-	padding-right: 80px;
-	display: flex;
-	float: center;
-	margin: 10px;
-	font-size: 50px;
+    padding-top: 50px;
+    padding-left: 25px;
+    padding-right: 80px;
+    display: flex;
+    float: center;
+    margin: 10px;
+    font-size: 50px;
 }
-
+ 
 .name img {
-	padding-right: 20px;
-	height: auto;
-	width: 70px;
+    padding-right: 20px;
+    height: auto;
+    width: 70px;
 }
-
+ 
 a{
-	color: black;
-	text-decoration: none;
-	font-size: 15px;
-	font-weight:bold;
-
+    color: black;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight:bold;
+ 
 }
 #menu a:hover{
-	text-decoration: none;
-	color: #005000;
-	font-weight:bold;
-	font-size: 16px;
+    text-decoration: none;
+    color: #005000;
+    font-weight:bold;
+    font-size: 16px;
 }
-
-
+ 
+ 
 #corpo p {
-	color: white;
-	font-size: 20px;
-	padding-bottom: 20px;
+    color: white;
+    font-size: 20px;
+    padding-bottom: 20px;
 }
-
+ 
 nav {
-	border:none;
-	float: left;
-	width: 18%;
-	height: 100%;
-	display: inline-block;
-	background-color: #106850;
+    border:none;
+    float: left;
+    width: 18%;
+    height: 100%;
+    display: inline-block;
+    background-color: #106850;
 }
 aside {
-	border:none;
-	float: right;
-	width: 18%;
-	height: 100%;
-	display: inline-block;
-	background-color: #106850;
+    border:none;
+    float: right;
+    width: 18%;
+    height: 100%;
+    display: inline-block;
+    background-color: #106850;
 }
-
+ 
 article {
-	border: none;
-	float: center;
-	height: 100%;
-	width: 62.18%;
-	display: inline-block;
+    border: none;
+    float: center;
+    height: 100%;
+    width: 62.18%;
+    display: inline-block;
 }
-
+ 
 footer {
-	border: solid black 5px;
-	height: 80px;
-	width: 100%;
+    border: solid black 5px;
+    height: 80px;
+    width: 100%;
 }
-
+ 
 .a {
-	height: 15px;
-	border-width:0;
-	color: #005000;
-	background-color: #005000;
+    height: 15px;
+    border-width:0;
+    color: #005000;
+    background-color: #005000;
 }
-
+ 
 .imf {
 	width: 80px;
 	height: 80px;
-	margin-top: 40px;
+	padding-top: 40px;
 	display: inline-block;
-	margin-right: 200px;
+	margin-right: 640px;
 	float: right;
 }
 
@@ -236,7 +226,7 @@ footer {
 	width: 80px;
 	height: 80px;
 	padding-right: 20px;
-	margin-top: 39px;
+	padding-top: 39px;
 	display: inline-block;
 	float: right;
 }
@@ -244,63 +234,63 @@ footer {
 .imt {
 	width: 80px;
 	height: 80px;
-	margin-top: 40px;
+	padding-top: 40px;
 	display: inline-block;
 	float: right;
 	padding-right: 20px;
 }
-
+ 
 .copy {
-	float: left;
-	color: white;
-	display: flex;
+    float: left;
+    color: white;
+    display: flex;
 }
-
+ 
 .contatti {
-	float: left;
-	color: white;
-	display: flex;
-	font-size: 15px;
-	
+    float: left;
+    color: white;
+    display: flex;
+    font-size: 15px;
+    
 }
-
+ 
 #copyblock {
-	padding-top: 15px;
-	padding-left: 15px;
-	width: 300 px;
-	height: 140px;
-	float:left;
-	flex-direction: column;
+    padding-top: 15px;
+    padding-left: 15px;
+    width: 300 px;
+    height: 140px;
+    float:left;
+    flex-direction: column;
 }
 .contatti2 {
-	float: left;
-	color: white;
-	display: flex;
-	font-size: 15px;
-	padding-left: 15px;
+    float: left;
+    color: white;
+    display: flex;
+    font-size: 15px;
+    padding-left: 15px;
 }
-
+ 
 #copyblock a:hover {
-	text-decoration: underline;
-	font-weight:bold;
-	font-size: 16px;
+    text-decoration: underline;
+    font-weight:bold;
+    font-size: 16px;
 }
-
+ 
 div #hormenu {
-	width: auto;
-	float: right;
-	margin: 0;
-	padding-top: 5px;
-	background: ;
+    width: auto;
+    float: right;
+    margin: 0;
+    padding-top: 5px;
+    background: ;
 }
-
+ 
 div#hormenu ul
 {
 margin: 0;
 padding: 0;
 list-style-type: none;
 }
-
+ 
 div#hormenu li
 {
 width:100px;
@@ -309,7 +299,7 @@ margin: 0;
 padding: 0;
 color:black;
 }
-
+ 
 div#hormenu a
 {
 display: block;
@@ -317,19 +307,19 @@ padding: 5px;
 color: #000;
 text-decoration: none;
 }
-
+ 
 div#hormenu a:hover
 {
 background-color: #000033;
 color: #FFFFFF;
 text-decoration: none;
 }
-
+ 
 div#hormenu li ul
 {
 display: none
 }
-
+ 
 div#hormenu li:hover ul
 {
 display: block;
@@ -341,17 +331,24 @@ margin: 0 0 0 -1px;
 border:1px solid black;
 background: white;
 }
-
+ 
 div#hormenu li li { 
-	border:none; 
-	width: 99px;
+    border:none; 
+    width: 99px;
 }
 div#hormenu li li a {
-	padding:2px 2px 2px 10px; 
+    padding:2px 2px 2px 10px; 
 }
-
+ 
+div#hormenu .lingua {
+    color: white;
+    text-decoration: none;
+}
 div#hormenu .lingua {
 	color: white;
 	text-decoration: none;
  text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
+}
+.menuz{
+	color:green;
 }
