--- a/sito/ITALIANO/inostriprodotti/styleinostriprodotti.css
+++ b/sito/ITALIANO/inostriprodotti/styleinostriprodotti.css
@@ -3,6 +3,9 @@ body, html {
     width: auto;
     padding-left: 200px;
     padding-right: 200px;
+    /*display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;*/
 }
  
 body {
@@ -11,6 +14,7 @@ body {
 }
  
 #menu .testo {
+    font-size: 15px;
     color: black;
     padding-left: 55px;
     display: inline-block;
@@ -57,7 +61,6 @@ body {
     grid-area: body;
     width: auto;
     height:1800px;
-    text-align:center;
 }
 .rightSide {
     border: 5px #005000 solid;
@@ -73,7 +76,7 @@ body {
     grid-area: footer; 
     height: 150px;
     width: 1fr;
-    background-color: #013220;
+    background-color: #022600;
     margin-bottom: 20px;
 }
  
@@ -118,6 +121,11 @@ body {
     display: inline-block;
 }
  
+#title .login {
+    float: right;
+    margin-right: 30px;
+}
+ 
 .subname h3 {
     text-align: left;
     margin: auto;
@@ -153,7 +161,7 @@ a{
     font-weight:bold;
  
 }
-a:hover{
+#menu a:hover{
     text-decoration: none;
     color: #005000;
     font-weight:bold;
@@ -235,9 +243,113 @@ footer {
 .copy {
     float: left;
     color: white;
-    display: inline-block;
-    padding-top: 80px;
+    display: flex;
+}
+ 
+.contatti {
+    float: left;
+    color: white;
+    display: flex;
+    font-size: 15px;
+    
+}
+ 
+#copyblock {
+    padding-top: 15px;
     padding-left: 15px;
+    width: 300 px;
+    height: 140px;
+    float:left;
+    flex-direction: column;
+}
+.contatti2 {
+    float: left;
+    color: white;
+    display: flex;
+    font-size: 15px;
+    padding-left: 15px;
+}
+ 
+#copyblock a:hover {
+    text-decoration: underline;
+    font-weight:bold;
+    font-size: 16px;
+}
+ 
+div #hormenu {
+    width: auto;
+    float: right;
+    margin: 0;
+    padding-top: 5px;
+}
+ 
+div#hormenu ul
+{
+margin: 0;
+padding: 0;
+list-style-type: none;
+}
+ 
+div#hormenu li
+{
+width:100px;
+float:left;
+margin: 0;
+padding: 0;
+color:black;
+}
+ 
+div#hormenu a
+{
+display: block;
+padding: 5px;
+color: #000;
+text-decoration: none;
+}
+ 
+div#hormenu a:hover
+{
+background-color: #000033;
+color: #FFFFFF;
+text-decoration: none;
+}
+ 
+div#hormenu li ul
+{
+display: none
+}
+ 
+div#hormenu li:hover ul
+{
+display: block;
+position: absolute;
+z-index:1;
+width:99px;
+padding: 0;
+margin: 0 0 0 -1px;
+border:1px solid black;
+background: white;
+}
+ 
+div#hormenu li li { 
+    border:none; 
+    width: 99px;
+}
+div#hormenu li li a {
+    padding:2px 2px 2px 10px; 
+}
+ 
+div#hormenu .lingua {
+    color: white;
+    text-decoration: none;
+}
+div#hormenu .lingua {
+	color: white;
+	text-decoration: none;
+ text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
+}
+.menuz{
+	color:green;
 }
 .caselle{
     border: 2px solid #005000;
