--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
+/*inizio style css*/
+
 body, html {
 	height: auto;
 	width: auto;
 	padding-left: 160px;
 	padding-right: 120px;
-	/*display: flex;
-	flex-wrap: nowrap;
-	justify-content: center;*/
 	justify-content: center;
 }
 
@@ -61,7 +60,7 @@ body {
 	width: 240px;
 	height: 1fr;
 	background-repeat: no-repeat;
-	background-image: url("../IMMAGINI/germoglio3.png");
+	background-image: url("sito/immagini/germoglio3.png");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
@@ -69,7 +68,7 @@ body {
 	border: 5px solid #005000;;
 	grid-area: body;
 	width: 900px;
-	height:1800px;
+	height:2300px;
 }
 .rightSide {
 	border: 5px #005000 solid;
@@ -77,7 +76,7 @@ body {
 	width: 240px;
 	height: auto;
 	background-repeat: no-repeat;
-	background-image: url("../immagini/prova2.png");
+	background-image: url("sito/immagini/prova2.png");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
@@ -111,7 +110,7 @@ body {
 	width: auto;
 	display: inline-block;
 	margin: auto;
-	background-image: url("../immagini/banner.png");
+	background-image: url("sito/immagini/banner.png");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	padding-left: 66px;
@@ -291,7 +290,7 @@ div #hormenu {
 	float: right;
 	margin: 0;
 	padding-top: 5px;
-	background: ;
+	/*background: ;*/
 }
 
 div#hormenu ul
@@ -355,3 +354,85 @@ div#hormenu .lingua {
 	text-decoration: none;
  text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 }
+/* fine style css*/
+
+/*inizio css per grafici*/
+
+.chartBox{
+    width:700px !important;
+    height:700px !important;
+	margin: 0 auto;
+	margin-top:20px;
+}
+#myChart1{
+    border:2px solid green;
+}
+#myChart2{
+    border:2px solid green;
+}
+#myChart{
+    border:2px solid green; 
+}
+/*fine css per grafici*/
+
+/*inizio css i nostri prodotti*/
+.menuz{
+	color:green;
+}
+.caselle{
+    border: 2px solid #005000;
+    width: 250px;
+    height: 350px;
+    margin-top: 10px;
+    margin-left: 10px;
+    display: inline-block;
+    min-height:404;
+}
+.img{
+    padding: 15px;
+    width:220px;
+    height:270px;
+}
+figcaption{
+    text-align: center;
+    font-weight:bold;
+    margin-top:2px;
+}
+figcaption:hover{
+    text-decoration:underline;
+    color:green;
+    cursor: zoom-in;
+}
+.img:hover{
+    text-decoration:underline;
+    cursor: zoom-in;
+}
+/*fine css i nostri prodotti*/
+
+/*inizio css serre*/
+
+.imgdettaglio{
+    float: left;
+    padding: 10px;
+}
+.titolodettaglio{
+    text-align:center;
+    display:grid;
+    
+    font-weight: bold;
+    font-size: 25px;
+}
+ol{
+    margin-left: auto;
+    margin-top: 700px;
+}
+.int{
+    list-style:none;
+    margin-left:-15px;
+    font-weight:bold;
+    margin-bottom:5px;
+}
+li{
+    list-style:none;    
+}
+/*fine css serre*/
