--- a/sito/style.css
+++ b/sito/style.css
@@ -413,18 +413,19 @@ figcaption:hover{
 
 .imgdettaglio{
     float: left;
-    padding: 10px;
+	padding-left: 25px;
+	padding-top: 15px;
 }
 .titolodettaglio{
     text-align:center;
     display:grid;
-    
+    margin-top: 15px;
     font-weight: bold;
     font-size: 25px;
 }
 ol{
     margin-left: auto;
-    margin-top: 700px;
+    margin-top: 300px;
 }
 .int{
     list-style:none;
@@ -435,4 +436,31 @@ ol{
 li{
     list-style:none;    
 }
+
 /*fine css serre*/
+
+/*inizio css serra base*/
+
+.testobase{
+	font-size: 20px;
+	padding: 10px;
+	text-align: center;
+	width: auto;
+}
+ol{
+	
+	font-size: 20px;
+}
+.a1{
+	width:250px;
+	height:400px;
+	border:2px solid black;
+	margin-left:30px;
+	display:inline-block;
+	margin-top:30px;
+}
+.rt{
+	width: 625px;
+	float:right;
+	margin-top: -300px;
+}
