--- a/sito/login.css
+++ b/sito/login.css
@@ -16,16 +16,13 @@ form {
     width: 360px;
     margin: 30px auto;
 }
-input {
-	font: 14px 'Open Sans', sans-serif;
+input {;
     border: 2px solid #ccc;
     padding: 6px;
-    display: block;
 	margin-bottom: 10px;
     width: 96%;
 }
 button {
-    font: 14px 'Open Sans', sans-serif;
     background-color: #4285f4;
     color: white;
     padding: 6px;
