--- a/sito/login.css
+++ b/sito/login.css
@@ -35,3 +35,12 @@ button {
     margin-top: 10px;
 	text-transform: uppercase;
 }
+.b {
+    background-color: #4285f4;
+    color: white;
+    padding: 6px;
+    cursor: pointer;
+    border: none;
+    margin-top: 10px;
+	text-transform: uppercase;
+}
