--- a/sito/login.css
+++ b/sito/login.css
@@ -44,3 +44,14 @@ button {
     margin-top: 10px;
 	text-transform: uppercase;
 }
+
+.p {
+    margin-top: 200px;
+}
+
+.body {
+	border: 5px solid #005000;;
+	grid-area: body;
+	width: 900px;
+	height:700px;
+}
