--- a/sito/style.css
+++ b/sito/style.css
@@ -472,10 +472,16 @@ ol{
 }
 
 .alogo {
-	width: 150px;
-	height: 150px;
-	margin-left: 40px;
-	margin-top: 20px;
+	width: 125px;
+	height: 125px;
+	margin-left: 60px;
+	margin-top: 50px;
+}
+
+.alogo2 {
+	width: 200px;
+	height: 200px;
+	margin-left: 10px;
 }
 
 .atitle {
