--- a/sito/style.css
+++ b/sito/style.css
@@ -396,7 +396,8 @@ div#hormenu .lingua {
 .caselle figcaption{
     text-align: center;
     font-weight:bold;
-    margin-top:2px;
+	margin-top:2px;
+	color: black;
 }
 .caselle figcaption:hover{
     text-decoration:underline;
