--- a/sito/style.css
+++ b/sito/style.css
@@ -613,6 +613,12 @@ ol{
 	color:black;
 }
 .avatar{
+	display: inline-block;
+}
+.avatar img{
 	border-radius: 50%;
-	dis
+}
+.savani{
+	text-align: center;
+	display: grid;
 }
