--- a/sito/style.css
+++ b/sito/style.css
@@ -426,6 +426,7 @@ div#hormenu .lingua {
 	padding-top: 80px;
 	font-weight: bold;
 	font-size: 25px;
+	color: #022600;
 }
 ol{
     margin-left: auto;
@@ -607,6 +608,7 @@ ol{
 	padding-top: 200px;
 	font-weight: bold;
 	font-size: 25px;
+	color: #022600;
 }
 
 .imgdettaglio2 {
