--- a/sito/style.css
+++ b/sito/style.css
@@ -65,7 +65,7 @@ body {
 	background-attachment: fixed;
 }
 .body {
-	border: 5px solid #005000;;
+	border: 5px solid #005000;
 	grid-area: body;
 	width: 900px;
 	height:2300px;
