--- a/sito/style.css
+++ b/sito/style.css
@@ -17,7 +17,7 @@ body {
 	-webkit-flex-flow: row nowrap;
 	justify-content: space-around;
 	-webkit-justify-content: space-around;
-	width: 1600px;
+	/*width: 1600px;*/
 }
 
 #menu .testo {
